# GAA-Video-Analysis

./: .gitignore  DEPLOYMENT.md  README.md  YOLO_Bytetrack.ipynb  annotate_pixels.py  export_data_from_roboflow.py  gaa_pitch_config.py  sample_frames.py
Interactive_analytics_system_frontend/: README.md  package.json
Interactive_analytics_system_frontend/pages/: index.tsx
Interactive_analytics_system_frontend/styles/: globals.css
interactive_analytics_system_backend/: .dockerignore  .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  VENV_GUIDE.md  YOLO_Bytetrack.ipynb  app.py  main.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup_venv.sh  start.sh  streamlit_app.py
interactive_analytics_system_backend/extras/: README.md
interactive_analytics_system_backend/gpu_inference/: README.md  __init__.py  modal_yolo.py
interactive_analytics_system_backend/pipeline/: __init__.py  config.py  detect.py  gaa_pitch_config.py  homography.py  line_constraints.py  map_players.py  schemas.py  trajectories.py  video.py
interactive_analytics_system_backend/static/: index.html  style.css
interactive_analytics_system_backend/tests/: __init__.py  conftest.py  test_endpoints.py  test_gpu_inference.py  test_homography.py  test_line_constraints.py  test_map_players.py  test_trajectories.py
pipeline_testing_and_research/: YOLO_Bytetrack.ipynb  export_data_from_roboflow.py  sample_frames.py
